02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Disabled removing document type nodes

02/03/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added support for detecting a file's line separator and preserving it for
      later during write.

02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * jsXe now allows plugins to specify their own localized messages. These
      messages are stored in properties files in the plugin jar file under the
      'messages' directory. The files are named identically to jsXe's messages
      files (messages.en, messages.de).

01/30/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * jsXe now shows the correct validation errors in the validation errors
      dialog box.

01/19/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed how external schema files are resolved.

11/21/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a number of bugs having to do with how and when the XML document
      is parsed.

11/09/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * The open file dialog now defaults to the directory specified in
      the system parameter user.dir. This causes tho open file dialog to open
      to the C:\Documents and Settings\user directory instead of the My
      Documents directory in windows.

11/01/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * XMLDocuments were marked as not synced with the document after they
      were parsed in some cases. This caused the document to serialize itself
      it some unnessary places and sometimes mark itself as dirty because of it.
    * Fixed a bug where the Log file stream was being closed by the
      ActivityLogDialog.
    * Added a dialog that shows validation errors (though this may not be
      working quite yet, I'm not sure I'm setting the parameters with Xerces
      correctly).
    * Fixed validation so that it returns correct error messages.

10/26/2005 Ian Lewis <IanLewis@member.fsf.org>
